# lisca

./: .gitignore  AGENTS.md  Claude.md  IDEAS.md  IMPLEMENTATION_PLAN.md  README.md  design.md  ideas.md  index.html  overlay.html  package.json  rebuild1.md  rebuild3.md  test_book.md  vite.config.ts  wip.md
.claude/skills/lisca-feature-specs/: SKILL.md
.claude/skills/lisca-testing/: SKILL.md
.github/workflows/: test.yml
docs/: testing-future.md  testing-strategy.md
specs/: README.md  hotkey.md  overlay.md  queue.md  settings.md  system-tray.md  tts-backend.md  voice-catalog.md
src/: App.css  App.test.tsx  App.tsx
src-tauri/: Cargo.toml  catalog.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_commands.rs  app_paths.rs  clipboard.rs  commands.rs  errors.rs  hotkey.rs  lib.rs  main.rs  overlay.rs  persist.rs  tray.rs  tts.rs  voice_prefs.rs
src-tauri/src/actors/: messages.rs  mod.rs  queue_actor.rs  speech_player_actor.rs  transcriber_actor.rs
src-tauri/src/actors/speech_player_actor/: end_notifier.rs  mod.rs
src-tauri/src/catalog/: download.rs  kokoro.rs  mod.rs  piper.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/hotkey/: mod.rs
src-tauri/src/models/: kokoro.rs  kokoro_phonemizer.rs  mod.rs  piper.rs  pool.rs
src-tauri/src/overlay/: mod.rs
src-tauri/src/queue/: controllable.rs  mod.rs  playable.rs  transcribable.rs
src-tauri/src/speech_player/: end_notifier.rs  mod.rs  playback.rs  rodio_output.rs
src-tauri/src/transcriber/: language.rs  mod.rs
src-tauri/src/tts/: audio.rs  commands.rs  config.rs  kokoro.rs  language.rs  mod.rs  model.rs  onnx_session.rs  phonemizer.rs  piper.rs  piper_models.rs  playback.rs  processor.rs  queue.rs  queue_facade.rs  queue_manager.rs  queue_store.rs  session.rs  text.rs  voice_mapping.rs
src-tauri/src/tts/backend/: mod.rs  voice_resolver.rs
src-tauri/src/tts/kokoro/: mod.rs  model.rs
src-tauri/src/tts/model/: mod.rs  voice_resolver.rs
src-tauri/src/tts/piper/: catalog.rs  commands.rs  manager.rs  mod.rs  model.rs  session.rs
src-tauri/src/voice_prefs/: mod.rs
src/components/: DownloadProgress.tsx  HotkeyRecorder.tsx  InstalledModels.tsx  ModelConfig.tsx  ModelLoader.tsx  PiperModelPicker.tsx  QueueControls.tsx  QueueList.tsx  SpeechTest.tsx  TtsQueue.tsx  VoiceBrowser.tsx  VoiceMappingSettings.tsx  VoiceRow.tsx
src/components/__tests__/: DownloadProgress.test.tsx  InstalledModels.test.tsx  QueueControls.test.tsx  QueueList.test.tsx  TtsQueue.test.tsx  VoiceBrowser.test.tsx  VoiceMappingSettings.test.tsx  VoiceRow.test.tsx
src/components/common/: ErrorToast.css  ErrorToast.tsx  index.ts
src/components/queue/: PlaybackControls.tsx  QueueItemControls.tsx  QueueList.css  QueueList.tsx  QueueListView.tsx  index.ts  queueUtils.ts
src/components/queue/__tests__/: QueueList.test.tsx
src/components/settings/: HotkeyRecorder.css  HotkeyRecorder.tsx  SettingsTab.css  SettingsTab.tsx  VoiceMappingSettings.css  VoiceMappingSettings.tsx  index.ts
src/components/settings/__tests__/: HotkeyRecorder.test.tsx  VoiceMappingSettings.test.tsx
src/components/voices/: InstalledVoices.css  InstalledVoices.tsx  VoiceBrowser.css  VoiceBrowser.tsx  index.ts
src/components/voices/__tests__/: InstalledVoices.test.tsx  VoiceBrowser.test.tsx
src/contexts/: toast.tsx
src/hooks/: index.ts  usePiperModels.ts  useTtsQueue.ts
src/hooks/__tests__/: useTtsQueue.test.ts
src/overlay/: OverlayApp.css  OverlayApp.tsx  QueueOverlay.css  QueueOverlay.tsx  index.html  index.tsx  main.tsx
src/overlay/__tests__/: QueueOverlay.test.tsx
src/test/: setup.ts
src/types/: events.ts  hotkey.ts  ipc.ts  lang-names.ts  piper.ts  queue.ts  voice-catalog.ts  voice-prefs.ts  voiceMapping.ts
src/utils/: format.ts
src/utils/__tests__/: format.test.ts
