[package]
name = "lisca"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lisca_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["onnx", "ort-xnnpack"]
onnx = ["dep:ort"]
ort-cuda = ["onnx", "ort/cuda"]
ort-xnnpack = ["onnx", "ort/xnnpack"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
rodio = "0.20"
tokio = { version = "1", features = ["sync", "rt"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ort = { version = "=2.0.0-rc.12", optional = true, default-features = true }
misaki-rs = { version = "0.3.0", default-features = false }
espeak-ng = { version = "0.1.2", features = ["bundled-data-en"] }
unicode-normalization = "0.1.24"

# TODO: remove when fixed. Pin time, because of conflicts https://github.com/tauri-apps/tauri/issues/15525
time = "=0.3.47"
