[package]
name = "lisca"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lisca_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
enigo = "0.6.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "macros", "rt", "rt-multi-thread", "time"] }
whatlang = "0.18"
ort = "2.0.0-rc.12"
rodio = "0.20"
espeak-ng = { version = "0.1.2", features = ["bundled-data-en", "bundled-data-fr", "bundled-data-de", "bundled-data-es", "bundled-data-it", "bundled-data-pt", "bundled-data-nl", "bundled-data-ru", "bundled-data-pl", "bundled-data-sv", "bundled-data-da", "bundled-data-fi", "bundled-data-no", "bundled-data-cs", "bundled-data-hu", "bundled-data-tr", "bundled-data-el", "bundled-data-ro", "bundled-data-uk", "bundled-data-hi"] }
unicode-normalization = "0.1.24"
misaki-rs = { version = "0.3.0", default-features = false, features = ["espeak"] }
log = "0.4"
env_logger = "0.11"
futures-util = "0.3.32"
reqwest = { version = "0.13.4", features = ["stream"] }
actix = "0.13"

[dev-dependencies]
tempfile = "3"


# Read the optimization guideline for more details: https://tauri.app/concept/size/#cargo-configuration
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
